# blunder-butler

./: .gitignore  AGENTS.md  README.md  pyproject.toml
prompts/: HEURISTICS_V2.md  subtype_heuristics.md
src/blunder_butler/: __init__.py  aggregate.py  analyze.py  cache.py  cli.py  config.py  errors.py  fetch.py  llm.py  log.py  models.py  parse.py  phase.py  pipeline.py  report.py  single_game.py  time_analysis.py
tests/: conftest.py  test_aggregate.py  test_cache.py  test_cli.py  test_parse.py  test_phase.py  test_report.py
tests/fixtures/: sample_3games.pgn
